Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-104831

windeployqt does not deploy Designer plugins for QUiLoader

    XMLWordPrintable

Details

    • Windows
    • ec6b22f67d (qt/qtbase/dev) ec6b22f67d (qt/tqtc-qtbase/dev) fa853a7715 (qt/qtbase/6.4) fa853a7715 (qt/tqtc-qtbase/6.4) fa853a7715 (qt/tqtc-qtbase/tqtc/qtinsight-6.4)

    Description

      qtbug104831.zip Build the attached project and run windeployqt.exe on it.

      It does not deploy plugins\designer\qquickwidget.dll, thus causing QUiLoader to fail to process QQuickWidget in the .ui file.

       

      (Side note: Due to QTBUG-104755, this test project will fail to run in Qt Creator in Debug mode too, if using MSVC)

       

      Workaround

      Deploy the required plugins manually

      Attachments

        For Gerrit Dashboard: QTBUG-104831
        # Subject Branch Project Status CR V

        Activity

          People

            kleint Friedemann Kleint
            skoh-qt Sze Howe Koh
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes