windeployqt: Deploy Qt Designer plugins for QtUiTools

Make QtUiTools a known module with command line options and
plugin dependencies.

Note: There is no automated dependency checking for those
plugins as this can lead to undesired libraries being pulled.

Fixes: QTBUG-104831
Change-Id: I31a0c3620460d6558edcf8245f43502f2bca7748
Reviewed-by: Jörg Bornemann <joerg.bornemann@qt.io>
(cherry picked from commit ec6b22f67dc6133b280a8f3fe40d7d1cbef819bc)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>